2004-07-02  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-chart.c: Fix coding style in a few places.

	* src/planner-ttable-chart.c (ttable_chart_map):
	* src/planner-ttable-view.c: (ttable_view_project_loaded_cb): Add
	workaround to make this a bit better for 0.12.

2004-07-02  Richard Hult  <richard@imendio.com>

	* src/planner-ttable-chart.c (planner_ttable_chart_set_model):
	Don't add a signal connected to a task to the list of connections
	to remove.

	* src/planner-ttable-row.c (recalc_bounds): Don't use
	uninitialized values.

2004-07-01  Richard Hult  <richard@imendio.com>

	* src/planner-ttable-row.c (ttable_row_draw_resource_ival): Draw
	the border correctly.

	* src/planner-gantt-chart.c: (gantt_chart_row_has_child_toggled),
	(planner_gantt_chart_set_model): Redraw when parenthood changes.

	* src/planner-ttable-chart.c: Add hack to fix a bug where zoom to
	fit don't work.

2004-07-01  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-model.c (value_cache_get_wbs): Plug leak.

	* src/planner-gantt-*.c: Clean up a bit.

2004-07-01  Richard Hult  <richard@imendio.com>

	* src/planner-resource-view.c (resource_view_insert_resource_cb):
	Don't enter editable mode for inserted rows, we need undo
	transactions first.

2004-06-30  Richard Hult  <richard@imendio.com>

	* Makefile.am:
	* configure.in:
	* examples/sample-1.planner:  Dist the examples.

	* data/ui/xml-planner-plugin.ui: Fix string.

	* docs/user-guide/C/planner.xml: Make the man version the same as
	the app version, looks silly otherwise.
	
	* libplanner/mrp-parser.c: (mrp_parser_save):
	* libplanner/mrp-project.c: (mrp_project_save_as):
	* src/planner-application.c: (application_init):
	* src/planner-window.c: (window_do_save_as), (planner_window_open):
	* src/planner-xml-planner-plugin.c: (xml_planner_plugin_export):
	Fix up filename extensions and mime types.

	* planner.spec.in: Get this baby working.
	
2004-06-30 Alvaro del Castillo  <acs@barrapunto.com>

	* configure.in